Fix SpotBugs warnings